* Release 2.3.0 (2002/03/07)

New functionality (at last!).

Added "listenip" and -b option to set listening address.

Added "tcptimeout" and "idletimeout" to allow inactive TCP tunnels to be
closed.

Added "ipmode" and -U option to support mixed traffic mode for a single
client or server.

Makefile changes for Irix and HPUX from Kyle Dent.

Japanese documentation NOT YET updated.

* Release 2.2.2 (2001/04/13)

Include missing Japanese documentation.

Handle files without a terminating newline.

On FreeBSD, only create a parent process if the program is going to detach.
This means there isn't an idle parent process if the program is not run in
detached mode.

Fix "PUT" handling in ftpgw.tcl.

Added RPM spec file to the distribution.

Note that all RCS id lines will have changed as the result of importing files
into CVS at SourceForge.

* Release 2.2.1 (2001/02/07)

Fix bug handling client access using IP address rather than host name.

* Release 2.2.0 (2001/02/02)

Add SO_KEEPALIVE code to (eventually) reap dead client connections.

Modify ftpgw.tcl to mitigate memory leak that shows up with Tcl versions < 8.4
(an possibly that too). It's still not perfect, but it's better!

Fix FreeBSD detaching (again!)

Handle hostnames that resolve to multiple addresses on both client and server
side.

Fix bug in picking up default target host.

* Release 2.1.3 (2000/10/13)

Version numbering changed to common open-source practice -- odd numbered
minor releases are development versions.

Added support and fixes for building on FreeBSD and Tru64 (Compaq Alpha).
FreeBSD requires the BUGGY_FORK_WITH_THREADS definition and an interesting
method of detaching a process ...

Changed the definition of SHA_LONG in sha.h for 64-bit platforms.

Handle the case where the client key-reuse token expires before the server's.
This would lead to a client failing to establish any connections after a
period of time.

Make sure messages still get written to stderr before a process actually